--- a/papers/Graph-based process mining/experiment2/experiement2_pm4py.ipynb
+++ b/papers/Graph-based process mining/experiment2/experiement2_pm4py.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,8 @@
     "import pandas as pd\n",
     "\n",
     "import timeit\n",
-    "import os"
+    "import os\n",
+    "import datetime"
    ]
   },
   {
@@ -26,22 +27,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "method = 'pm4py'\n",
     "\n",
-    "# if you use kubernetes, you can map the CPU_Limit & MEMORY_Limit to the arguments.\n",
-    "# CPU_Limit = os.getenv('CPU_LIMIT')\n",
-    "# MEMORY_Limit = os.getenv('MEMORY_LIMIT')\n",
-    "CPU_Limit = '4.0'\n",
-    "MEMORY_Limit = '1024m'"
+    "# if you use kubernetes, you can map the dicingDate to the arguments.\n",
+    "# dicingDate = os.getenv('DICING_DATE')\n",
+    "dicingDate = '2015-07-01'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,42 +53,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment1_file = '/data/experiment1.csv'"
+    "experiment2_file = '/data/experiment2.csv'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "result_columns = ['Analysis', 'CPU Limit', 'MEMORY Limit', 'Loading Time', 'DFG Calculation Time', 'Total Time']"
+    "result_columns = ['Analysis', 'Number Of Events', 'Loading Time', 'DFG Calculation Time', 'Total Time']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def getDFG(result, method, CPU_Limit, MEMORY_Limit, file):\n",
+    "def getDFG(result, method, dicingDate, result_columns):\n",
+    "    dicingDate = datetime.datetime.strptime(dicingDate, '%Y-%m-%d')\n",
+    "    queryDate = dicingDate\n",
+    "    queryDate = queryDate.strftime(\"%Y-%m-%d\")\n",
+    "    \n",
     "    time_start = timeit.default_timer()\n",
     "\n",
     "    log = pd.read_csv(file, sep=';', encoding='latin-1', usecols=[\"SessionID\", \"PAGE_NAME\", \"TIMESTAMP\"])\n",
     "    log = log.rename(columns={\"SessionID\": \"case:concept:name\", \"PAGE_NAME\": \"concept:name\", \"TIMESTAMP\": \"time:timestamp\"})\n",
     "\n",
+    "    log[\"time:timestamp\"] =  pd.to_datetime(log[\"time:timestamp\"])\n",
+    "\n",
+    "    log = log[log['time:timestamp'].dt.strftime('%Y-%m-%d') <= queryDate]\n",
+    "\n",
+    "    numberOfEvents = len(log.index)\n",
+    "    \n",
     "    time_log = timeit.default_timer()\n",
     "\n",
     "    dfg = dfg_factory.apply(log)\n",
     "\n",
     "    time_stop = timeit.default_timer()\n",
-    "    \n",
     "\n",
     "    Loading_Time = time_log-time_start\n",
     "    DFG_Calculation_Time = time_stop-time_log\n",
     "    Total_Time = time_stop-time_start\n",
     "\n",
-    "    new_row = pd.DataFrame([[method, CPU_Limit, MEMORY_Limit, Loading_Time, DFG_Calculation_Time, Total_Time]]\n",
+    "    new_row = pd.DataFrame([[method, numberOfEvents, Loading_Time, DFG_Calculation_Time, Total_Time]]\n",
     "                           , columns=result_columns)\n",
     "\n",
     "    result = pd.concat([result, new_row])\n",
@@ -110,37 +118,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if os.path.isfile(experiment1_file):\n",
-    "    result = pd.read_csv(experiment1_file)\n",
+    "if os.path.isfile(experiment2_file):\n",
+    "    result = pd.read_csv(experiment2_file)\n",
     "else:\n",
     "    result = pd.DataFrame(columns=result_columns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "result = getDFG(result, method, CPU_Limit, MEMORY_Limit, file)"
+    "result = getDFG(result, method, dicingDate, result_columns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "result = result.sort_values(by=result_columns)\n",
-    "result.to_csv(experiment1_file, index = False)"
+    "result.to_csv(experiment2_file, index = False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
